# trinity

./: .gitignore  ALResult.cpp  ALResult.h  ASTNode.cpp  ASTNode.h  BcDecompress.cpp  BinkOutputStream.h  BuildFX.py  CMakeLists.txt  CachingIncludeHandler.cpp  CachingIncludeHandler.h  CompileMessageQueue.cpp  CompileMessageQueue.h  D3DFundamentalTypes.h  EffectCompilerBase.h  EffectCompilerDX11.cpp  EffectCompilerDX11.h  EffectCompilerDX12.cpp  EffectCompilerDX12.h  EffectCompilerDx9.cpp  EffectCompilerDx9.h  EffectCompilerGL2.cpp  EffectCompilerGL2.h  EffectCompilerGL3.cpp  EffectCompilerGL3.h  EffectCompilerGL4.cpp  EffectCompilerGL4.h  EffectCompilerMetal.cpp  EffectCompilerMetal.h  EffectCompilerOrbis.cpp  EffectCompilerOrbis.h  EffectData.cpp  EffectData.h  FXAnalyzer.cpp  FXInfo.py  HLSLParser.c  HLSLParser.h  HLSLParser.y  HLSLScanner.cpp  HLSLScanner.re  (+356 more)
Apex/: Apex.cpp  Apex.h  Tr2ApexRenderer.cpp  Tr2ApexRenderer.h  Tr2ApexRes.cpp  Tr2ApexRes.h  Tr2ApexRes_Blue.cpp  Tr2ApexScene.cpp  Tr2ClothingActor.cpp  Tr2ClothingActor.h  Tr2ClothingRes.cpp  Tr2ClothingRes.h  Tr2ClothingRes_Blue.cpp
Controllers/: Tr2BindingPoint.cpp  Tr2BindingPoint.h  Tr2Controller.cpp  Tr2Controller.h  Tr2ControllerExpression.cpp  Tr2ControllerExpression.h  Tr2ControllerFloatVariable_Blue.cpp  Tr2StateMachine.cpp  Tr2StateMachine.h  Tr2StateMachineState.cpp  Tr2StateMachineState.h  Tr2StateMachineTransition.cpp
Curves/: Tr2CurveColor.cpp  Tr2CurveColorMixer.cpp  Tr2CurveColorMixer_Blue.cpp  Tr2CurveEulerRotationExpression.cpp  Tr2CurveScalarExpression.cpp  Tr2CurveVector2.cpp  Tr2CurveVector2.h  Tr2CurveVector3.cpp  Tr2CurveVector3.h  Tr2CurveVector3Expression.cpp  Tr2CurveVector3Expression.h  Tr2CurveVector3Lerp_Blue.cpp  Tr2CurveVector3_Blue.cpp  Tr2DistanceTracker.cpp  Tr2DistanceTracker.h  Tr2FollowCurveKey.cpp  Tr2FollowCurveKey.h  Tr2GrannyTrack.cpp  Tr2GrannyTransformTrack.cpp  Tr2GrannyTransformTrack.h  Tr2GrannyVectorTrack.cpp  Tr2GrannyVectorTrack.h  Tr2QuaternionLerpCurve.cpp  Tr2ScalarExprKeyCurve.h  TriColorCurve.h  TriCurveSet_Blue.cpp  TriRotationCurve.cpp  TriRotationCurve.h  TriScalarCurve.cpp  TriScalarCurve.h  TriScalarKey.cpp  TriScalarKey.h  TriVectorCurve.cpp  TriVectorCurve.h
EffectParameter/: Tr2FloatParameter.cpp  Tr2FloatParameter.h  Tr2GeometryBufferParameter.cpp  Tr2GeometryBufferParameter.h  Tr2Matrix4Parameter.cpp  Tr2Texture2dLodParameter.cpp  Tr2Texture2dLodParameter.h  Tr2Vector2Parameter.cpp  Tr2Vector3Parameter.cpp  Tr2Vector4Parameter.cpp  TriFloatArrayParameter.cpp  TriFloatArrayParameter.h  TriFloatParameter.cpp  TriFloatParameter.h  TriTexture2DParameter.cpp  TriTexture2DParameter.h  TriVariableParameter.cpp  TriVariableParameter.h  TriVector4Parameter.cpp  TriVector4Parameter.h
Eve/: EveCamera.cpp  EveCamera.h  EveCamera_Blue.cpp  EveComponentRegistry.cpp  EveComponentRegistry.h  EveComponentRegistry_Blue.cpp  EveCurveLineSet.cpp  EveCurveLineSet.h  EveDistanceField.cpp  EveDistanceField.h  EveDistanceField_Blue.cpp  EveEffectRoot.cpp  EveEffectRoot.h  EveEffectRoot2.cpp  EveEffectRoot2.h  EveEffectRoot2_Blue.cpp  EveEntity.cpp  EveEntity.h  EveEntity_Blue.cpp  EveLensflare.cpp  EveLensflare.h  EveLineSet.cpp  EveLineSet.h  EveOccluder.cpp  EvePlanet.cpp  EvePlanet.h  EvePlanet_Blue.cpp  EveProjectBracket_Blue.cpp  EveRootTransform.cpp  EveRootTransform.h  EveSO2ModelCenterPos.h  EveSO2ModelTargetPos.cpp  EveShip2Builder.cpp  EveShip2Builder.h  EveShip2Builder_Blue.cpp  EveSpaceScene.cpp  EveSpaceScene.h  EveSpaceScene_Blue.cpp  EveSpherePin.cpp  EveSpherePin.h  (+13 more)
Font/: Tr2FontManager.cpp  Tr2FontManager_Blue.cpp  Tr2FontMeasurer.cpp
Include/: ITr2DebugRenderer2.h  ITr2Interior.h  ITr2MultiPassScene.h  ITr2Scene.h  ITr2SoundEmitter.h  ITriColor.h  ITriCurveLength.h  ITriDevice.h  ITriIME.h  (+15 more)
trinity/tests/: CMakeLists.txt  EveComponentRegistryTest.cpp  TrinityEngineTest.cpp
trinityal/tests/: ALResultTest.cpp  BitmapDimensions.cpp  CMakeLists.txt  Compute.cpp  ConstantBuffer.cpp  Dxt1Image.h  Dxt3Image.h  Dxt5Image.h  Dxt5Volume.h  FakeGoogleTest.h  Fence.cpp  GPUTimer.cpp  Raytracing.cpp  RenderContext.cpp  RenderContextCreation.cpp  RenderWindow.h  RenderWindow_Macos.mm  RenderWindow_Stub.cpp  RenderWindow_Win32.cpp  Rendering.cpp  SamplerState.cpp  Shader.cpp  StdAfx.h  SwapChain.cpp  SwapChainResizing.cpp  Texture.cpp  TextureSubresource.cpp  TrinityALTest.cpp  VertexDefinition.cpp  VertexLayout.cpp  VideoAdapterInfo.cpp  WithRenderContextFixture.cpp  WithRenderContextFixture.h  WithValidRenderContextFixture.cpp  WithValidRenderContextFixture.h  WithWindowFixture.h  WithWindowFixture_Macos.mm  WithWindowFixture_Stub.cpp  WithWindowFixture_Win32.cpp  XrgbVolume.h  (+1 more)
trinityal/tests/Shaders.DX11/: AddConstantToBuffer.cs.h  AddVectors.cs.h  ConstantColor.ps.h  GroupShared.cs.h  SampleTextureFromTexCoord.ps.h  SampleVolumeTexture.ps.h  WriteToUav.ps.h
trinityal/tests/Shaders.DX12/: AddConstantToBuffer.csh  AddVectors.cs.h  ConstantColor.ps.h  GroupShared.csh  InstancedRendering.vs.h  OutputVector.cs.h  PositionOnly.vs.h  PositionOnlyWithPerObjectData.vs.h  RayGen.rs.h  RayGen.rsh  SampleTexture.cs.h  SampleTextureMipFromTexCoord.ps.h  SampleVolumeTexture.ps.h  WriteToUav.ps.h
trinityal/tests/Shaders.metal/: AddConstantToBuffer.cs.h  AddConstantToBuffer.csh  AddVectors.cs.h  AddVectors.csh  ClosestHit.rs.h  ClosestHit.rsh  ClosestHitWithMaterial.rs.h  ClosestHitWithMaterial.rsh  ConstantColor.ps.h  GroupShared.cs.h  InstancedRendering.vs.h  LoadMsaaTexture.ps.h  MetalDefines.h  Miss.rs.h  Miss.rsh  OutputTexCoord.ps.h  OutputVector.cs.h  PositionOnly.vs.h  PositionOnlyWithPerObjectData.vs.h  RayGen.rs.h  RayGen.rsh  SampleTexture.cs.h  SampleTexture.csh  SampleTextureFromTexCoord.ps.h  SampleTextureMipFromTexCoord.ps.h  SampleVolumeTexture.ps.h  TexCoordAndPosition.vs.h  WriteToUav.ps.h
trinityal/tests/Shaders.vulkan/: AddConstantToBuffer.csh  AddVectors.cs.h  GroupShared.cs.h  InstancedRendering.vs.h  LoadMsaaTexture.ps.h  OutputTexCoord.ps.h  PositionOnly.vs.h  SampleTexture.csh  SampleTextureFromTexCoord.ps.h  SampleVolumeTexture.ps.h  frag.spv
(+3466 files in other folders)
